@@ -7,6 +7,9 @@ Milestone 95
   * Minimum supported iOS raised from 8 to 11. Skia may build back to iOS 9 but versions older
     than 11 are not tested. Community contributions to support versions 9 and 10 of iOS may be
     considered, but they may not be complex as they cannot be tested.
+  * Removed SkRuntimeEffect::makeImage. This didn't end up providing any useful benefit compared
+    to the general-case SkRuntimeEffect::makeShader API.
+    https://review.skia.org/453142
 
 * * *
 
